# five-min-journal

./: .gitignore  Cargo.toml  main
migrations/2020-02-12-174455_entries/: .up.sql.swo  .up.sql.swp  up.sql
src/: .env  .main.rs.swo  .main.rs.swp  .models.rs.swn  .models.rs.swo  .models.rs.swp  .schema.rs.swo  .schema.rs.swp  lib.rs  main.rs  models.rs  routes.rs  schema.rs
templates/: index.html.tera
