[package]
name = "fiveMJ"
version = "0.1.0"
authors = ["czar <cyobero@gmail.com>"]
edition = "2018"
description = "A daily five-minute journal to reduce stress and anxiety?"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
diesel = { version = "1.4.3", features = ["mysql"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4.10"
lazy_static = "1.3.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["tera_templates", "diesel_mysql_pool", "json"]
